--- a/dubbo-client/src/main/resources/application.yml
+++ b/dubbo-client/src/main/resources/application.yml
@@ -1,5 +1,21 @@
+server:
+  port: 8100
+
 spring:
   application:
     name: dubbo-client
-server:
-  port: 8100
+  profiles:
+    active: dev
+  cloud:
+    nacos:
+      config:
+        server-addr: 127.0.0.1:8848
+        username: nacos
+        password: nacos
+        discovery:
+          group: DEFAULT_GROUP
+          namespace: ${spring.profiles.active}
+        config:
+          group: DEFAULT_GROUP
+          namespace: ${spring.profiles.active}
+
